# podzone-mpc

./: Dockerfile  index.yaml  podzone-mpc-0.1.0.tgz  pyproject.toml
.github/workflows/: build-push.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/podzone_mpc/: context_server.py
