[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podzone-mpc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "qdrant-client>=1.17.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.1.0",
    "uvicorn>=0.29.0",
]

[tool.setuptools.packages.find]
where = ["src"]
